--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html":"5.5.*",
+        "laravelcollective/html": "5.5.*",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "thomaswelton/laravel-gravatar": "~1.0"
     },
     "require-dev": {
